hphp/hack/test/full_fidelity/cases/module_newtype_bad1.php
<?hh

module foo;
newtype module Foo = int; // error
